Fixed contrast issues

--- a/final/styles/index-small.css
+++ b/final/styles/index-small.css
@@ -265,20 +265,20 @@
         padding: 1rem;
         text-decoration: none;
         border: solid 1px var(--chess-white);
-        font-size: 1.2rem; 
+        font-size: 1.2rem;
         font-weight: 700;
         border-radius: 6px;
         color: var(--chess-white);
     }
 
     main>h1 {
-        color: var(--chess-light-green);
+        color: var(--chess-green);
         padding-left: 1rem;
         font-size: 2.5rem;
         text-shadow: 2px 2px 4px var(--chess-black);
     }
 
-    article{
+    article {
         color: var(--chess-white);
     }
 
